changed navbar layout